--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 <h1>hello world</h1>
 <h1>hello world</h1>
 <h1>hello baby</h1>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>yu</title>
+</head>
+<body>
+
+</body>
+</html>
